cleaning up code and removing ide folder from repository