@@ -4,11 +4,12 @@ import model.Vertex;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import java.util.Stack;
 
 public class GraphDepthFirstSearch {
 
-    public static void main(String args[]) {
+    public static void main(String[] args) {
         Vertex<Integer> v0 = new Vertex<>(0);
         Vertex<Integer> v1 = new Vertex<>(1);
         Vertex<Integer> v2 = new Vertex<>(2);
@@ -17,10 +18,10 @@ public class GraphDepthFirstSearch {
         Vertex<Integer> v5 = new Vertex<>(5);
         Vertex<Integer> v6 = new Vertex<>(6);
 
-        v0.setNeighbors(Arrays.asList(v1,v2));
-        v1.setNeighbors(Arrays.asList(v3,v4));
-        v4.setNeighbors(Arrays.asList(v5,v6));
-        v6.setNeighbors(Arrays.asList(v0));
+        v0.setNeighbors(Arrays.asList(v1, v2));
+        v1.setNeighbors(Arrays.asList(v3, v4));
+        v4.setNeighbors(Arrays.asList(v5, v6));
+        v6.setNeighbors(List.of(v0));
 
         GraphDepthFirstSearch graphDepthFirstSearch = new GraphDepthFirstSearch();
         //System.out.println("Stack implementation");
@@ -30,11 +31,11 @@ public class GraphDepthFirstSearch {
         graphDepthFirstSearch.traverseRecursive(v0);
     }
 
-    private void traverseStack(Vertex root) {
+    private void traverseStack(Vertex<Integer> root) {
         Stack<Vertex<Integer>> stack = new Stack();
         stack.push(root);
 
-        while(!stack.isEmpty()) {
+        while (!stack.isEmpty()) {
             Vertex<Integer> currentValue = stack.pop();
 
             if (!currentValue.isVisited()) {
